tests/fail/no_traits.rs
struct Test;

fn main() {
    sscanf::scanf!("hi", "{}", Test);
}
